@@ -1,3 +1,8 @@
+2012-11-19  Sofiane Naci  <sofiane.naci@arm.com>
+
+	* config/aarch64/aarch64.c
+	(aarch64_output_mi_thunk): Refactor to generate RTL patterns.
+
 2012-11-19  Mans Rullgard  <mans@mansr.com>
 
 	PR target/55276
